--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,23 +2,29 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Sistema de Barbearia</title>
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link type="text/css" rel="stylesheet" href="\materialize\css\materialize.css"  media="screen,projection"/>
 <link type="text/css" rel="stylesheet" href="\materialize\css\materialize.min.css"  media="screen,projection"/>
 
-
 </head>
-<body>
 
-<h1>Olá Spring Boot</h1>
-<a class="waves-effect waves-light btn-small" href="/cadastropessoa">Cad. Pessoa</a>
+<body>
+<h1>BarberShop</h1>
+
+
+<div>
+<a class="waves-effect waves-light btn-small" href="/cadastropessoa">Clientes</a>
+
+<a class="waves-effect waves-light btn-small" href="/cadastropessoa">Agendamentos</a>
+
+<a class="waves-effect waves-light btn-small" href="/cadastropessoa">Aniversariante</a>
+</div>
 
 
  <!--JavaScript at end of body for optimized loading-->
  <script type="text/javascript" src="\materialize\js\materialize.js"></script>
-  <script type="text/javascript" src="\materialize\js\materialize.min.js"></script>
-  
+  <script type="text/javascript" src="\materialize\js\materialize.min.js"></script> 
 </body>
 </html>
