--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -4,9 +4,13 @@
 <meta charset="UTF-8">
 <title>Cadastro</title>
 
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link type="text/css" rel="stylesheet" href="/materialize\css\materialize.css"  media="screen,projection"/>
-<link type="text/css" rel="stylesheet" href="/materialize\css\materialize.min.css"  media="screen,projection"/>
+ <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+ <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css"/>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+ 
+<link type="text/css" rel="stylesheet" href="\materialize\css\materialize.css"  media="screen,projection"/>
+<link type="text/css" rel="stylesheet" href="\materialize\css\materialize.min.css"  media="screen,projection"/>
+
 
 <style type="text/css">
 table.striped>tbody>tr:nth-child(odd) {
@@ -19,65 +23,107 @@ form input[type=submit] {
 </style>
 </head>
 <body>
-<h3>Spring Boot + Thymeleaf + Materialize</h3><br/>
-<h5>Cadastro de Pessoas</h5>
 
-<div class="row">
-<form action="salvarpessoa" id="formpessoa" method="post" th:object="${pessoaobj}" class="col s12">
+ <nav>
+     <div class="nav-wrapper">
+         <a href="#" class="brand-logo">Barber</a>
+         <a href="#" data-activates="menu-mobile" class="button-collapse">
+             <i class="material-icons">menu</i>
+         </a>
+         <ul class="right hide-on-med-and-down">
+             <li><a href="#">Agenda</a></li>
+             <li><a href="/cadastropessoa">Clientes</a></li>
+             <li><a href="#">Profissionais</a></li>
+             <li><a href="#">Aniversáriantes</a></li>
+        </ul>
+         <ul class="side-nav" id="menu-mobile">
+             <li><a href="#">Agenda</a></li>
+             <li><a href="#">Clientes</a></li>
+             <li><a href="#">Profissionais</a></li>
+             <li><a href="#">Aniversáriantes</a></li>
+         </ul>
+     </div>
+ </nav>
 
 
-			<div class="row">
-				<div class="input-fiel col s6">
-					<label for="id" class="active">ID</label> 
-					   <input name="id" th:field="*{id}" id="id"
-						readonly="readonly">
-				</div>
-				<div class="input-fiel col s6">
-					<label for="nome" class="active">Nome</label>
-					  <input name="nome" th:field="*{nome}" id="nome" class="validate">
-				</div>
-			</div>
 
-			<div class="row">
-				<div class="input-fiel col s6">
-					<label for="sobrenome" class="active">Sobrenome</label> 
-					  <input name="sobrenome" th:field="*{sobrenome}" class="validate">
-				</div>
 
-				<div class="input-fiel col s6">
-					<label for="idade" class="active">Idade</label> 
-					  <input name="idade" th:field="*{idade}" class="validate">
-				</div>
-			
-           </div>
-
-			<div class="row">
-				<div class="input-fiel col s6">
-					<input class="waves-effect waves-light btn-small" type="submit"
-						value="Salvar">					
-						
-					<button class="waves-effect waves-light btn-small" onclick="document.getElementById('formpessoa').reset();">Novo</button>
-												
-				</div>
-			</div>
-</form>
-</div>
-
-<br/>
-<br/>
 	<div class="row">
-		<form action="pesquisarpessoa" method="post" class="input-fiel col s12">
+		<form action="pesquisarpessoa" method="post"
+			class="input-fiel col s12">
 			<div class="row">
 				<div class="input-field col s12">
 					<label for="nomepesquisa" class="active">Pesquisa:</label> <input
 						name="nomepesquisa" class="validate"> <input
 						class="waves-effect waves-light btn-small" type="submit"
-						value="Buscar">
-						<a class="waves-effect waves-light btn-small" href="/listapessoas"> Lista de Cadastros</a>
+						value="Buscar"> <a
+						class="waves-effect waves-light btn-small" href="/listapessoas">
+						Lista de Cadastros</a>
 				</div>
 			</div>
 		</form>
 	</div>
+
+
+	<!-- Modal Trigger -->
+	<a class="waves-effect waves-light btn modal-trigger" href="#modal1">Cadastrar</a>
+
+	<!-- Modal Structure -->
+	<div id="modal1" class="modal modal-fixed-footer">
+		<div class="modal-content">
+
+
+
+			<form action="salvarpessoa" id="formpessoa" method="post"
+				th:object="${pessoaobj}" class="col s12">
+
+
+				<div class="row">
+
+					<div class="input-fiel col s6">
+						<label for="nome" class="active">Nome</label> <input name="nome"
+							th:field="*{nome}" id="nome" class="validate">
+					</div>
+
+					<div class="input-fiel col s6">
+						<label for="sobrenome" class="active">Sobrenome</label> <input
+							name="sobrenome" th:field="*{sobrenome}" class="validate">
+					</div>
+				</div>
+
+				<div class="row">
+
+
+					<div class="input-fiel col s6">
+						<label for="telefone" class="active">Telefone</label> <input
+							name="telefone" th:field="*{telefone}" class="validate">
+					</div>
+
+					<div class="input-fiel col s6">
+						<label for="email" class="active">E-mail</label> <input
+							name="email" th:field="*{email}" class="validate">
+					</div>
+
+				</div>
+
+				<div class="row">
+					<div class="input-fiel col s6">
+						<input class="waves-effect waves-light btn-small" type="submit"
+							value="Salvar">
+
+					</div>
+				</div>
+			</form>
+
+
+		</div>
+		<div class="modal-footer">
+			<input class="waves-effect waves-light btn-small" type="submit" value="Salvar">
+		</div>
+	</div>
+
+
+
 
 
 	<br/>
@@ -89,7 +135,8 @@ form input[type=submit] {
 <th>ID</th>
 <th>Nome</th>
 <th>Sobrenome</th>
-<th>Idade</th>
+<th>Telefone</th>
+<th>E-mail</th>
 <th>Editar</th>
 <th>Excluir</th>
 </tr>
@@ -97,9 +144,10 @@ form input[type=submit] {
  <tr th:each = "pessoa : ${pessoas}">
  
  <td th:text = "${pessoa.id}"></td>
- <td><a th:href="@{/telefones/{idpessoa}(idpessoa=${pessoa.id})}"><span th:text = "${pessoa.nome}"></span></a></td>
+  <td th:text = "${pessoa.nome}"></td>
  <td th:text = "${pessoa.sobrenome}"></td>
-  <td th:text = "${pessoa.idade}"></td>
+  <td th:text = "${pessoa.telefone}"></td>
+    <td th:text = "${pessoa.email}"></td>
  <td><a th:href="@{/editarpessoa/{idpessoa}(idpessoa=${pessoa.id})}">Editar</a></td>
   <td><a th:href="@{/removerpessoa/{idpessoa}(idpessoa=${pessoa.id})}">Excluir</a></td>
  
@@ -107,8 +155,31 @@ form input[type=submit] {
 </table>
 
  <!--JavaScript at end of body for optimized loading-->
- <script type="text/javascript" src="/materialize\js\materialize.js"></script>
-  <script type="text/javascript" src="/materialize\js\materialize.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+
+ <script>
+ $(function(){
+     $(".button-collapse").sideNav();
+ });
+ </script>
+ 
+  <script>
+  $('.modal').modal({
+      dismissible: true, // Modal can be dismissed by clicking outside of the modal
+      opacity: .5, // Opacity of modal background
+      inDuration: 300, // Transition in duration
+      outDuration: 200, // Transition out duration
+      startingTop: '4%', // Starting top style attribute
+      endingTop: '10%', // Ending top style attribute
+      ready: function(modal, trigger) { // Callback for Modal open. Modal and trigger parameters available.
+        alert("Ready");
+        console.log(modal, trigger);
+      },
+      complete: function() { alert('Closed'); } // Callback for Modal close
+    }
+  );
+ </script>
  
  
 </body>
