--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,27 +4,49 @@
 <meta charset="UTF-8">
 <title>Sistema de Barbearia</title>
 
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+ <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+ <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css"/>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+ 
 <link type="text/css" rel="stylesheet" href="\materialize\css\materialize.css"  media="screen,projection"/>
 <link type="text/css" rel="stylesheet" href="\materialize\css\materialize.min.css"  media="screen,projection"/>
 
 </head>
 
 <body>
-<h1>BarberShop</h1>
+
+ <nav>
+     <div class="nav-wrapper">
+         <a href="#" class="brand-logo">Barber</a>
+         <a href="#" data-activates="menu-mobile" class="button-collapse">
+             <i class="material-icons">menu</i>
+         </a>
+         <ul class="right hide-on-med-and-down">
+             <li><a href="#">Agenda</a></li>
+             <li><a href="/cadastropessoa">Clientes</a></li>
+             <li><a href="#">Profissionais</a></li>
+             <li><a href="#">Aniversáriantes</a></li>
+        </ul>
+         <ul class="side-nav" id="menu-mobile">
+             <li><a href="#">Agenda</a></li>
+             <li><a href="#">Clientes</a></li>
+             <li><a href="#">Profissionais</a></li>
+             <li><a href="#">Aniversáriantes</a></li>
+         </ul>
+     </div>
+ </nav>
 
 
-<div>
-<a class="waves-effect waves-light btn-small" href="/cadastropessoa">Clientes</a>
-
-<a class="waves-effect waves-light btn-small" href="/cadastropessoa">Agendamentos</a>
-
-<a class="waves-effect waves-light btn-small" href="/cadastropessoa">Aniversariante</a>
-</div>
-
-
+ 
  <!--JavaScript at end of body for optimized loading-->
- <script type="text/javascript" src="\materialize\js\materialize.js"></script>
-  <script type="text/javascript" src="\materialize\js\materialize.min.js"></script> 
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+
+ <script>
+ $(function(){
+     $(".button-collapse").sideNav();
+ });
+ </script>
+ 
 </body>
 </html>
