Lincando o modal de cadastro na versão responsive

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
         </ul>
          <ul class="side-nav" id="menu-mobile">
              <li><a href="#">Agenda</a></li>
-             <li><a href="#">Clientes</a></li>
+            <li><a href="/cadastropessoa">Clientes</a></li>
              <li><a href="#">Profissionais</a></li>
              <li><a href="#">Aniversáriantes</a></li>
          </ul>
